<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tibame</groupId>
	<artifactId>CFA104G3</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<name>CFA104G3 Web App</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>
		<!-- 		<dependency> -->
		<!-- 		    <groupId>javax.servlet.jsp.jstl</groupId> -->
		<!-- 		    <artifactId>jstl-api</artifactId> -->
		<!-- 		    <version>1.2</version> -->
		<!-- 		</dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>jstl</groupId> -->
		<!-- <artifactId>jstl</artifactId> -->
		<!-- <version>1.2</version> -->
		<!-- </dependency> -->
		<!-- 		<dependency> -->
		<!-- 			<groupId>javax.servlet</groupId> -->
		<!-- 			<artifactId>jstl</artifactId> -->
		<!-- 			<version>1.2</version> -->
		<!-- 		</dependency> -->
		<!-- 		<dependency> -->
		<!-- 			<groupId>org.apache.taglibs</groupId> -->
		<!-- 			<artifactId>taglibs-standard-impl</artifactId> -->
		<!-- 			<version>1.2.5</version> -->
		<!-- 		</dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>mysql</groupId> -->
		<!-- <artifactId>mysql-connector-java</artifactId> -->
		<!-- <version>8.0.26</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>javax.servlet</groupId> -->
		<!-- <artifactId>javax.servlet-api</artifactId> -->
		<!-- <version>4.0.0</version> -->
		<!-- <scope>provided</scope> -->
		<!-- </dependency> -->
	</dependencies>

	<build>
		<finalName>CFA104G3</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>